# hook

./: .gitignore  CMakeLists.txt  README.md  run.sh  vcpkg.json
cmake/: TargetExportArtifacts.cmake
src/: CMakeLists.txt  comeasy.cpp  withdll.cpp  wrotei.cpp
src/devel/: CMakeLists.txt  gfx.cpp  gfx.h  main.cpp
src/gadget/: CMakeLists.txt  address_map.h  dll_main.cpp  hook.h  hook_dxgi.cpp  hook_dxgi.h  hook_helper.h  wrotei.cpp
src/loader/: CMakeLists.txt
src/util/: CMakeLists.txt  com_ptr.h  crash_handler.h  logger.h  module.h  unicode.h  util.h  vtable.h  window.h
test/: CMakeLists.txt  simple_test.cpp
